--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,14 @@
-sonar.projectKey=robertocln
+sonar.projectKey=RobertoCLN_Aula-QA-24-11
 sonar.organization=robertocln
+
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=Aula-QA-24-11
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
